--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <div id="tha_bizznass" class="container text-center" style="display: none;">
         <div id="image_start">
-            <h2>I'm not a thief, but I'd do anything for you baby!</h2>
+            <h2>I'm not normally one to steal content, but I'd do anything for you baby!</h2>
             <h3 id="count_down">.....</h3>
         </div>
         <div id="image_a" style="display: none;">
